Clean up twig globals
- Layout no longer sets any context data
- "isAdmin" global removed, use "isUserAdmin()" instead
- "account" global removed, use "currentUser" instead

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -55,11 +55,11 @@
             {% block navigation %}
                 <nav role="navigation">
                     <ul class="nav--main mbn">
-                        {% if account %}
+                        {% if currentUser %}
                             <li>{{ macros.navlink('Dashboard', urlFor('dashboard'), 'dashboard', '-3 0') }}</li>
                             <li>{{ macros.navlink('Groups', urlFor('groups'), 'list') }}</li>
 
-                            {% if isUserAdmin(account) %}
+                            {% if isUserAdmin(currentUser) %}
                                 <li>{{ macros.navlink('Servers', urlFor('servers'), 'server', '-4 0') }}</li>
                                 <li>{{ macros.navlink('Repositories', urlFor('repositories'), 'repo', '-3 0') }}</li>
                                 <li>{{ macros.navlink('Environments', urlFor('environments'), 'leaf', '-1 0') }}</li>
