--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -41,7 +41,7 @@
     {% endif %}
 
     {# PENDING WORK #}
-    {% if isAdmin and pending %}
+    {% if isUserAdmin(currentUser) and pending %}
         <h3>Push and Build Queue</h3>
         {% include 'partials/pending-table.twig' %}
     {% endif %}
