--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% import _self as macros %}
+{% import _self as base_macros %}
 
 {% set buster = applicationSha[:4] ?: 'dev' ~ 'now'|date('U') %}
 
@@ -56,25 +56,25 @@
                 <nav role="navigation">
                     <ul class="nav--main mbn">
                         {% if currentUser %}
-                            <li>{{ macros.navlink('Dashboard', urlFor('dashboard'), 'dashboard', '-3 0') }}</li>
-                            <li>{{ macros.navlink('Groups', urlFor('groups'), 'list') }}</li>
+                            <li>{{ base_macros.navlink('Dashboard', urlFor('dashboard'), 'dashboard', '-3 0') }}</li>
+                            <li>{{ base_macros.navlink('Groups', urlFor('groups'), 'list') }}</li>
 
                             {% if isUserAdmin(currentUser) %}
-                                <li>{{ macros.navlink('Servers', urlFor('servers'), 'server', '-4 0') }}</li>
-                                <li>{{ macros.navlink('Repositories', urlFor('repositories'), 'repo', '-3 0') }}</li>
-                                <li>{{ macros.navlink('Environments', urlFor('environments'), 'leaf', '-1 0') }}</li>
-                                <li>{{ macros.navlink('Users', urlFor('users'), 'users') }}</li>
-                                {# <li>{{ macros.navlink('Logs', urlFor('logs', {'page': '1'}), 'paper-roll') }}</li> #}
+                                <li>{{ base_macros.navlink('Servers', urlFor('servers'), 'server', '-4 0') }}</li>
+                                <li>{{ base_macros.navlink('Repositories', urlFor('repositories'), 'repo', '-3 0') }}</li>
+                                <li>{{ base_macros.navlink('Environments', urlFor('environments'), 'leaf', '-1 0') }}</li>
+                                <li>{{ base_macros.navlink('Users', urlFor('users'), 'users') }}</li>
+                                {# <li>{{ base_macros.navlink('Logs', urlFor('logs', {'page': '1'}), 'paper-roll') }}</li> #}
                             {% endif %}
 
-                            <li>{{ macros.navlink('Queue', urlFor('queue'), 'in') }}</li>
-                            <li>{{ macros.navlink('Profile', urlFor('user.current'), 'user-card') }}</li>
-                            <li>{{ macros.navlink('Help', urlFor('help'), 'question', '-6 0') }}</li>
-                            <li>{{ macros.navlink('Logout', urlFor('logout'), 'sign-out') }}</li>
+                            <li>{{ base_macros.navlink('Queue', urlFor('queue'), 'in') }}</li>
+                            <li>{{ base_macros.navlink('Profile', urlFor('user.current'), 'user-card') }}</li>
+                            <li>{{ base_macros.navlink('Help', urlFor('help'), 'question', '-6 0') }}</li>
+                            <li>{{ base_macros.navlink('Logout', urlFor('logout'), 'sign-out') }}</li>
 
                         {% else %}
-                            <li class="signed-out">{{ macros.navlink('Help', urlFor('help'), 'question', '-6 0') }}</li>
-                            <li class="signed-out">{{ macros.navlink('Login', urlFor('login'), 'sign-in') }}</li>
+                            <li class="signed-out">{{ base_macros.navlink('Help', urlFor('help'), 'question', '-6 0') }}</li>
+                            <li class="signed-out">{{ base_macros.navlink('Login', urlFor('login'), 'sign-in') }}</li>
                         {% endif %}
                     </ul>
                 </nav>
