--- a/app/templates/user/user.edit.twig
+++ b/app/templates/user/user.edit.twig
@@ -1,23 +1,62 @@
-{% extends "user/user.twig" %}
+{% extends 'base.html.twig' %}
 
 {% set isSelf = (currentHalUser.id == user.id) %}
 {% set name = ldapUser ? ldapUser.firstName ~ ' ' ~ ldapUser.lastName : user.name %}
-{% set isEditing = true %}
 
 {% set page_title = 'Edit Profile: ' ~ name %}
 
-{% block name %}
-    <h2>Name</h2>
-    <input class="text-input" type="text" value="{{ getUsersActualName(user) }}">
-{% endblock %}
-
-{% block actions %}
-    <input class="btn" type="submit" value="Save Profile">
-    <a class="secondary-action" href="{{ urlFor('user', {'id': user.id}) }}">Cancel</a>
-{% endblock %}
-
 {% block content %}
-<form method="post">
-    {{ parent() }}
-</form>
+
+    {% if isSelf %}
+        <h2 data-nofunzone="{{ name }}" data-freud="{{ getUsersFreudianName() }}">
+            {{ getUsersActualName(user) }}
+        </h2>
+    {% else %}
+        <h2>{{ name }}</h2>
+    {% endif %}
+
+    {% if ldapUser %}
+        <p>{{ ldapUser.title }} ({{ ldapUser.teamName }})</p>
+    {% endif %}
+
+    <h3>Status</h3>
+    <ul>
+        <li><b>HAL:</b> {{ user.isActive ? 'Active' : 'Inactive' }}</li>
+        <li><b>LDAP:</b> {{ ldapUser ? 'Active' : 'Inactive' }}</li>
+    </ul>
+
+    {% if isSelf %}
+        <h3>Personal Access Tokens</h3>
+        <p>Tokens you have created that can be used to access the <a href="{{ urlFor('api.index') }}">HAL API</a>.</p>
+
+        <form action="{{ urlFor('user.token.create.handle', {id: user.id}) }}" method="post">
+            <table class="tablesaw tablesaw-stack" data-mode="stack">
+                <thead>
+                    <th>Label</th>
+                    <th>Token</th>
+                    <th></th>
+                </thead>
+                <tbody>
+                {% for token in user.tokens %}
+                    <tr>
+                        <td>{{ token.label }}</td>
+                        <td>{{ token.value }}</td>
+                        <td><a class="btn--destructive" href="{{ urlFor('user.token.delete.confirm', {id: user.id, token: token.value}) }}">Revoke</a></td>
+                    </tr>
+                {% endfor %}
+                    <tr>
+                        <td colspan="2">
+                            <input type="text" name="label" maxlength="50" class="text-input t50" placeholder="Token name or label..." required>
+                        </td>
+                        <td><input class="btn" type="submit" value="Generate"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
+    {% endif %}
+
+    <div>
+        <a class="btn" href="{{ urlFor('user', {'id': user.id}) }}">Return to Profile</a>
+    </div>
+
 {% endblock %}
